--- a/docs/pf/work1/index.css
+++ b/docs/pf/work1/index.css
@@ -29,9 +29,20 @@ body {
   margin:0;
 }
 
+/* 라이브러리 */
+
 
 /* 커스텀 */
 .section {
   width:calc(1920px - 16px);
-  background-color:red;
+}
+
+
+.box-1 {
+  background-color: red;
+  display: inline-block;
+  position: absolute;
+  left:-500px;
+  right:auto;
+  margin-top: -900px;
 }
