오버뷰 gsap 완료

--- a/docs/pf/work1/index.css
+++ b/docs/pf/work1/index.css
@@ -39,12 +39,17 @@ body {
 
 
 .box-1 {
-  background-color: red;
   display: inline-block;
   position: absolute;
   left:-500px;
   right:auto;
   margin-top: -900px;
+}
+
+.box-2 {
+  position: absolute;
+  top:55%;
+  left:9%;
 }
 
 .video-1 {
