로고 아이템 스크롤 트리거 완료

--- a/docs/pf/work1/index.css
+++ b/docs/pf/work1/index.css
@@ -33,6 +33,9 @@ body {
 
 
 /* 커스텀 */
+html {
+  overflow-x: hidden;
+}
 .section {
   width:calc(1920px - 16px);
 }
@@ -70,5 +73,6 @@ body {
 
 .img-3 {
   position: absolute;
-  top:55%;
+  top:30%;
+  left: 15%;
 }
