--- a/docs/pf/work1/index.css
+++ b/docs/pf/work1/index.css
@@ -40,20 +40,7 @@ html {
   width:calc(1920px - 16px);
 }
 
-
-.box-1 {
-  position: absolute;
-  left:-500px;
-  right:auto;
-  margin-top: -900px;
-}
-
-.box-2 {
-  position: absolute;
-  top:55%;
-  left:9%;
-}
-
+/* 비디오 아이템 */
 .video-1 {
   width: 365px;
   position: absolute;
@@ -70,11 +57,25 @@ html {
   left: 600px;
 }
 
-.img-3 {
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%);
-  left: 600px;
+/* 이미지 아이템 */
+.box-1 {
+  position: absolute;
+  left:-500px;
+  right:auto;
+  margin-top: -900px;
+}
+
+.box-2 {
+  position: absolute;
+  top:55%;
+  left:9%;
+}
+
+.box-3 {
+  position: absolute;
+  top: 30%;
+  left: 15%;
+  transform: translateY(-50%);
 }
 
 .box-5 {
