와이어프레임 배치

--- a/docs/pf/work1/index.css
+++ b/docs/pf/work1/index.css
@@ -62,3 +62,13 @@ body {
   top:2%;
   left: 600px;
 }
+
+.box-4{
+  width:1700px;
+  height:1200px;
+  position:absolute;
+  top:17%;
+  left:4%;
+  transform: translet(-50%,-50%);
+  
+}
